--- a/app/global.css
+++ b/app/global.css
@@ -8,3 +8,21 @@
     justify-content: center;
     align-items: center;
 }
+@layer components {
+    .h1-dark {
+        background: linear-gradient(180deg, #ffffff 0%, hsl(0, 0%, 67%) 100%),
+            #ffffff;
+        background-clip: text;
+    }
+
+    .h1-light {
+        background: linear-gradient(180deg,
+                hsla(224, 71%, 4%, 47%) 0%,
+                hsl(224, 71%, 4%) 100%),
+            #ffffff;
+    }
+
+    .h1 {
+        @apply dark:h1-dark h1-light bg-clip-text text-transparent;
+    }
+}
