--- a/app/global.css
+++ b/app/global.css
@@ -26,3 +26,19 @@
         @apply dark:h1-dark h1-light bg-clip-text text-transparent;
     }
 }
+/* -----------------------------------------------------ANIMATION */
+.animate-in {
+    animation: animateIn 0.3s ease 0.15s both;
+}
+
+@keyframes animateIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
