style: match color of underline with text

--- a/app/global.css
+++ b/app/global.css
@@ -29,7 +29,7 @@
             @apply text-gray-600 dark:text-zinc-400;
         }
         .typography {
-            @apply text-zinc-600 dark:text-zinc-400 prose prose-zinc dark:prose-invert
+            @apply prose prose-zinc dark:prose-invert decoration-muted-foreground prose-a:decoration-inherit
         }
 }
 /* -----------------------------------------------------ANIMATION */
